--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -9,6 +9,7 @@ AllCops:
     - 'test/test_helper.rb'
     - 'tmp/**/*'
     - 'vendor/bundle/**/*'
+    - 'Guardfile'
   Include:
     - '**/Rakefile'
     - '**/config.ru'
@@ -18,4 +19,6 @@ Metrics/LineLength:
 Metrics/BlockLength:
   ExcludedMethods: ['describe', 'context', 'feature']
 Style/FrozenStringLiteralComment:
+  Enabled: false
+Documentation:
   Enabled: false
