--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Metrics/BlockLength:
   ExcludedMethods: ['describe', 'context', 'feature']
 Metrics/MethodLength:
   Max: 15
+Style/AsciiComments:
+  Enabled: false
 Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
