--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -8,6 +8,7 @@ AllCops:
     - 'vendor/**/*'
     - 'Guardfile'
   NewCops: enable
+  SuggestExtensions: false
 Layout/LineLength:
   Max: 100
 Metrics/BlockLength:
